syntax = "proto3";

package grpc.route3;

message VersionRequest {
}

message VersionResponse {
  string version = 1;
}

/** A point in WGS84 coordinates */
message Point {
  double x = 1;
  double y = 2;
}

message DisturbanceOfPopulationMovementRequest {
  /** the geometry of the disturbance in WKB format

  WGS84 coordinate system
   */
  bytes disturbance_wkb_geometry = 1;

  /* The radius around the wkb_geometry to be analyzed.
      units are meters. */
  double radius_meters = 2;

  /** number of destinations which should be reached for one cell. after that routing for this cell will be stopped.
      0 -> continue until all are reached
   */
  uint32 num_destinations_to_reach = 3;

  /* targets to route to */
  repeated Point destinations = 4;

}

message GetDisturbanceOfPopulationMovementRequest {
  string dopm_id = 1;
}

message DisturbanceOfPopulationMovementStats {
  double population_within_disturbance = 1;

  // arrow recordbatch in Arrow IPC File format
  bytes recordbatch = 2;

}

message DisturbanceOfPopulationMovementResponse {
  string dopm_id = 1;
  DisturbanceOfPopulationMovementStats stats = 2;
}

message GetDisturbanceOfPopulationMovementRoutesRequest {
  enum CellRole {
    Origin = 0;
    Destination = 1;
  }
  string dopm_id = 1;
  CellRole cell_role = 2;
  repeated uint64 cells = 3;
}

message RouteWKB {
  uint64 origin_cell = 1;
  uint64 destination_cell = 2;
  double cost = 3;
  bytes wkb = 4;
}


message GetDisturbanceOfPopulationMovementRoutesResponse {
  string dopm_id = 1;
  repeated RouteWKB routes = 2;
}


service Route3 {
  rpc Version(VersionRequest) returns (VersionResponse) {}

  rpc AnalyzeDisturbanceOfPopulationMovement(DisturbanceOfPopulationMovementRequest) returns (DisturbanceOfPopulationMovementResponse) {}

  /* get an already computed analysis */
  rpc GetDisturbanceOfPopulationMovement(GetDisturbanceOfPopulationMovementRequest) returns (DisturbanceOfPopulationMovementResponse) {}
  rpc GetDisturbanceOfPopulationMovementRoutes(GetDisturbanceOfPopulationMovementRoutesRequest) returns (GetDisturbanceOfPopulationMovementRoutesResponse) {}

}
